# XRobot

./: .gitignore  LICENSE  README.md  mainwindow.py  mainwindow.ui  manual.py  manual.ui  requirements.txt  sys-settings.json  xrobot.py
ace_src/: README.md  TCP_Server.awp  TCP_Server.awp2  ace.cs  waste-sorting.awp2
calibration/: cal_param.json  cal_param_realsense.json  robot_param.json  robot_param_realsense.json
grasp/: calibration.py  chressboard-A3.pptx  chressboard-A4.pptx  grasp_controller.py
grasp/V4-sdk-standalone/: README.md  release.bat  sdk.sln  sdk_standalone.vcxitems
grasp/V4-sdk-standalone/sdk_c/: CMakeLists.txt  demo.cpp  motormaster.h  sdk_c.vcxproj  sdk_c.vcxproj.filters  wrapper.cpp
grasp/V4-sdk-standalone/sdk_common/: Config.h  Exception.h  Modbus.cpp  Modbus.h  RMAxis.cpp  RMAxis.h  calib.hpp  matrix.hpp  sdk_common.vcxitems  sdk_common.vcxitems.filters
grasp/V4-sdk-standalone/sdk_csharp/: AssemblyInfo.cpp  sdk_csharp.vcxproj  sdk_csharp.vcxproj.filters  wrapper.cpp  wrapper.h
grasp/V4-sdk-standalone/sdk_py/: CMakeLists.txt  __init__.pyi  install.bat  sdk_py.vcxproj  sdk_py.vcxproj.filters  setup.py  wrapper.cpp
grasp/V4-sdk-standalone/sdk_py/pybind11/: CMakeLists.txt  cast.h  pybind11.h
grasp/V4-sdk-standalone/sdk_py/pybind11/detail/: class.h  common.h
grasp/V4-sdk-standalone/sdk_py/pybind11/tools/: make_changelog.py
resource/: en.qm  en.ts  main.qrc  motormaster-0.0.1-cp38-cp38-linux_aarch64.whl  motormaster-0.0.1-cp38-cp38-linux_x86_64.whl  motormaster-0.0.1-cp38-cp38-win_amd64.whl  tap.qph
robot/: belt.py  common.py  gripper.py  robot_driver.py  robot_platform.py
scripts/: convert_ui.bat  designer.cmd  pack_embed.py
utils/: __init__.py  logs.py  settings.py  visual.py
vision_system/: camera.py  detection.py  misc.py
vision_system/yolo/: detector.py
(+14 files in other folders)
